# Ejercicios-ALSE

./: .gitignore  ejercicio1.1  ejercicio4.1  ejercicio8  ejercicio9  parcial2  parcial2.cpp  prueba  prueba.cpp
Primer corte/Ejercicios de practica/: ejercicio1.1.cpp  ejercicio4.1.cpp  ejercicio8.cpp  ejercicio9.cpp
Primer corte/Parcial/: parcial2.cpp
Segundo corte/Ejercicios de practica 1/: PalindromeNumber.cpp  TwoSum.cpp  calculadora_callbacks.cpp
Segundo corte/Ejercicios de practica 2/: mejor_tiempo_para_comprar_y_vender.cpp  numero_de_columna_de_excel.cpp  triangulo_de_pascal.cpp
Segundo corte/Ejercicios de practica 3/: alquiler.cpp  biblioteca.cpp
Segundo corte/Ejercicios de practica 4/: EjemploClases.puml  carrito.cpp  carrito.puml
Segundo corte/Parcial/: CMakeLists.txt  DispositivoInteligente.cpp  DispositivoInteligente.h  main.cpp
Tercer corte/: .gitignore  CMakeLists.txt  README.md  databasemanager.cpp  databasemanager.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.h  utils.cpp  utils.h
